--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container hero-inner">
         <div class="hero-content">
           <h1>Your Scott University experience has just begun</h1>
-          <p class="lead">Faith-driven higher education and professional programs — Online, Onsite &amp; Hybrid. Practical placements in Scotland (6 months–1 year practicum).</p>
+          <p class="lead">Faith-driven higher education and professional programs.</p>
           <div class="hero-ctas">
             <a class="btn primary" href="#programs">View Programs</a>
             <a class="btn outline" href="#contact">Request Info</a>
@@ -230,4 +230,5 @@
   })();
 </script>
 </body>
+
 </html>
