--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
     <section id="programs" class="section container">
       <header class="section-header">
         <h2>Programs & Levels</h2>
-        <p>Choose the level that suits you — fast practical certificates to postgraduate research.</p>
+        <p>Choose the level that suits you — from fast, practical certificates to postgraduate research.</p>
       </header>
 
       <div class="grid cols-3 programs-grid" role="list">
         <article class="card" role="listitem">
           <h3>CERTIFICATE</h3>
-          <p>Short practical courses (3–6 months). Ideal for entry-level mission training & practicum placements.</p>
+          <p>Short practical courses (6-12 months). Ideal for entry-level mission training & practicum placements.</p>
           <a class="btn small" href="#courses">See courses</a>
         </article>
 
         <article class="card" role="listitem">
           <h3>DIPLOMA</h3>
-          <p>In-depth skills & vocational training (6–12 months) with internship options in Scotland.</p>
+          <p>In-depth skills & vocational training with internship options in Scotland.</p>
           <a class="btn small" href="#courses">See courses</a>
         </article>
 
@@ -232,3 +232,4 @@
 </body>
 
 </html>
+
